@@ -657,17 +657,20 @@ name|CLAMP
 argument_list|(
 name|new_value
 argument_list|,
+name|gtk_adjustment_get_lower
+argument_list|(
 name|adj
-operator|->
-name|lower
+argument_list|)
 argument_list|,
+name|gtk_adjustment_get_upper
+argument_list|(
 name|adj
-operator|->
-name|upper
+argument_list|)
 operator|-
+name|gtk_adjustment_get_page_size
+argument_list|(
 name|adj
-operator|->
-name|page_size
+argument_list|)
 argument_list|)
 expr_stmt|;
 name|gtk_adjustment_set_value
