@@ -1,5 +1,10 @@
 2009-03-23  Michael Natterer  <mitch@gimp.org>
 
+	* app/widgets/gimpcontainertreeview-dnd.c: use GtkAdjustment's
+	accessors.
+
+2009-03-23  Michael Natterer  <mitch@gimp.org>
+
 	* app/widgets/gimpcontainergridview.c: use GtkAdjustment's accessors.
 
 2009-03-23  Michael Natterer  <mitch@gimp.org>
